tweak in causal logic

--- a/index.html
+++ b/index.html
@@ -312,7 +312,18 @@ post-implementation group with much lower incidence of the virus. This
 difference between the two groups in COVID-19 infection may combine with
 the difference in drug dosing to influence treatment outcomes. This
 difference in COVID-19 infection could therefore be a
-<em>confound</em>.</p>
+<em><strong>confound</strong></em>.</p>
+<p>The point is to clarify:</p>
+<ul>
+<li>What is the outcome to improve? This is the dependent variable.</li>
+<li>What is the difference in treatment intended to cause the
+improvement in the post-implementation group? This is the independent
+variable.</li>
+<li>All other variables are control variables. They should differ only
+by chance. If there is a noticeable pre-existing difference, and the
+level of that factor in one group affects the outcome, it is a
+confound.</li>
+</ul>
 </div>
 <div id="how-many-patients" class="section level2">
 <h2>How many patients?</h2>
