--- a/index.html
+++ b/index.html
@@ -354,6 +354,11 @@ effect we want to reliably detect.</p>
 Power Analysis
 </p>
 </div>
+<p>Power is a function of sample size, effect size, and statistical
+significance. Figure @ref(fig:power) is a plot of power rates against
+these other variables. A large effect (r ~ 0.5) is detectable with a
+sample of any size. But only large samples have the power to detect a
+statistically significant (p &lt; .05) small correlation (r = 0.1).</p>
 </div>
 </div>
 <div id="collecting-your-data" class="section level1">
