more writing on research design

--- a/index.html
+++ b/index.html
@@ -445,12 +445,7 @@ role="doc-biblioref">Cohen 1988</a>)</span>. Power is a function of
 effect size, sample size, and statistical significance. In order to
 decide on a number of patients we need to have a sense of what size of
 effect we want to reliably detect.</p>
-<div class="figure">
-<img src="index_files/figure-html/power-1.png" alt="Plot of Power Curves" width="672" />
-<p class="caption">
-Plot of Power Curves
-</p>
-</div>
+<p><img src="index_files/figure-html/power-1.png" width="672" /></p>
 <p>This a plot of power rates against these other variables. A large
 effect (r ~ 0.5) is detectable with a sample of any size. But only large
 samples have the power to detect a statistically significant (p &lt;
