--- a/index.html
+++ b/index.html
@@ -372,45 +372,67 @@ Resident Research Project</h1>
 <h1>Purpose of this Document</h1>
 <p>The purpose of this document is to assemble some advice and resources
 to support Swedish Pharmacy residents in their journey from project
-proposal to a completed research project.</p>
+proposal to a completed research project for presentation and
+publication.</p>
 <hr />
 </div>
-<div id="planning-your-project" class="section level1">
-<h1>Planning your Project</h1>
-<div id="the-causal-logic-of-your-project" class="section level2">
-<h2>The causal logic of your project</h2>
-<p>Fundamentally, the resident research project is an effort to gather
-causal evidence for the claim that a particular treatment or way of
-utilizing medicine “worked” by being more effective than a rival or
-pre-existing treatment. To plan data collection for the strongest causal
-evidence is the purpose of research design <span class="citation">(<a
-href="#ref-CampbellStanley1963" role="doc-biblioref">Campbell and
-Stanley 1963</a>)</span>.</p>
-<p>The ideal research design would be a pure experiment with random
-assignment. The resident would randomly assign patients to treatment and
-control conditions, then compare outcomes following treatment. In such a
-scenario the resident could attribute any significant difference in
-outcomes to the treatment because the groups would differ only by chance
-in all other ways. Any pre-existing differences would be statistically
-insignificant.</p>
-<p>Because the resident cannot randomly assign patients to conditions
-going forward, the project falls under the category of
-<em><strong>quasi-experiment</strong></em>. This means it is more
-vulnerable to confounding explanations of any difference in
+<div id="planning-the-project" class="section level1">
+<h1>Planning the Project</h1>
+<div id="the-causal-logic-of-the-project" class="section level2">
+<h2>The causal logic of the project</h2>
+<p>The resident researcher should begin the project with a basic sense
+of the design logic of the project. The point of this section is to
+introduce or reinforce a few basic concepts of research design as they
+apply to the resident research project.</p>
+<p>The project aspires to make a case for a proposed improved medical
+treatment. This case rests on causal evidence that the proposed
+treatment is more clinically effective than the current mode of
+treatment. The most convincing case would demonstrate that the treatment
+alone caused the improvement and cast doubt that the improvement would
+have happened anyway. To thoughtfully plan data collection for the
+strongest causal evidence, and to anticipate and minimize challenges of
+rival explanations, is the purpose of research <strong>design</strong>
+<span class="citation">(<a href="#ref-CampbellStanley1963"
+role="doc-biblioref">Campbell and Stanley 1963</a>)</span>.</p>
+<p>The ideal design would be based on random assignment of patients to
+conditions, as in a randomly controlled trial. The resident researcher
+would randomly assign patients to a control condition and various
+treatment conditions, then compare outcomes of all these groups
+following treatment, and the outcomes will differ at least slightly.
+Assume patients in the treatment conditions had better outcomes than
+patients in the control condition. The resident could attribute this
+difference to the treatment alone because in all other ways the groups
+would differ only by chance <em>by design</em>.</p>
+<p>Random assignment is probably not an option for resident research
+project. Until that happens, the project falls under the category of
+<strong>quasi-experiment</strong> which means it is more vulnerable to
+<strong>confounding explanations</strong> of any differences in
 outcomes.</p>
-<p>The resident research project will culminate in a comparison between
-two groups: a pre-implementation group and a post-implementation group.
-One difference between the groups is time, and recent history has made a
-big difference. Compare a pre-implementation group from the onset of the
-pandemic with a high incidence of COVID-19 to a more recent
-post-implementation group with much lower incidence of the virus. This
-difference between the two groups in COVID-19 infection may combine with
-the difference in drug dosing to influence treatment outcomes. This
-difference in COVID-19 infection could therefore be a
-<em><strong>confound</strong></em>.</p>
-<p>The point is to clarify:</p>
+<p>The resident research project based on retrospective chart review
+will culminate in a comparison between two groups: a pre-implementation
+group and a post-implementation group. Assume a set of data that show
+better outcomes for the post-implementation group. Great! Can we
+attribute that to implementation of an improved treatment or protocol,
+or for some other reason would the post-implementation group have fared
+better anyway?</p>
+<p>One potentially confounding pre-existing difference between the two
+groups is <em>time</em>, or history. A recent resident project provides
+a good example. In this project, the time frame for the
+pre-implementation group was early 2020 and thus this group had a higher
+incidence of COVID-19 infection than the more recent post-implementation
+group. Were outcomes for the pre-implementation group less favorable
+because more of them were infected with COVID-19? The proposed dosing
+protocol may very well have improved outcomes for the
+post-implementation group. The problem is there are competing
+explanations of the results. Pre-existing differences between the two
+groups in COVID-19 infection amounted to a <em>confounding</em> variable
+due to history.</p>
+<p>The point here is not to teach a course in research design but to
+help the resident researcher clarify for this project:</p>
 <ul>
-<li>What is the outcome to improve? This is the dependent variable.</li>
+<li>What are the primary outcomes to improve? Length of stay?
+Time-to-therapeutic level? These are <em>dependent</em> variables. They
+depend on, or are the effects of, other variables.</li>
 <li>What is the difference in treatment intended to cause the
 improvement in the post-implementation group? This is the independent
 variable.</li>
@@ -559,8 +581,18 @@ two proportions.</li>
 <li>“Time to…” a therapeutic level? In such a case you would be
 comparing two different quantities of time.</li>
 </ul>
-<p><strong>Odds ratios / Logistic regression</strong>.</p>
-<p><strong>Chi-square test of independence</strong>.</p>
+<p><strong>Odds ratios / Logistic regression</strong>. Some outcomes are
+binary. Yes or no. Something happened or it didn’t. Treatment worked or
+it did not. For projects with binary outcomes, the researcher will want
+to consider comparing odds ratios. Logistic regression would be the
+appropriate technique for modeling differences between the pre- and
+post-implementation groups in whether patients landed in one category or
+the other.</p>
+<p><strong>Chi-square test of independence</strong>. Some outcomes are
+categorical. There is no “more” or “less” but rather different
+categories of outcomes. For projects with categorical outcomes, the
+researcher will want to consider using chi-square tests of
+independence.</p>
 <p><strong>Two-sample t-test</strong>.</p>
 <p><strong>Z test of the difference of proportions</strong>.</p>
 <p><strong>Cohen’s <em>d</em> effect size</strong>.</p>
